fixing mobile readability

--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@
     --line-height-small: 1.2;
 
     --black: #000;
-    --pink: #5DAC81;
+    --green: #5DAC81;
     --white: #f0e9f2;
     --white-1: #e5e5e6da;
 
@@ -47,9 +47,9 @@
 
     --gutter-huge: 10rem;
     --gutter-medium: 5rem;
-    --gutter-normal: 3rem;
-    --gutter-small-1: 2.5rem;
-    --gutter-small: 2rem;
+    --gutter-normal: 4.5rem;
+    --gutter-small-1: 4.25rem;
+    --gutter-small: 4rem;
 
     --light: 1px solid rgb(36, 35, 35);
 }
@@ -151,12 +151,11 @@ h2::after {
     display: block;
     height: 2px;
     width: 10rem;
-    background: var(--pink);
+    background: var(--green);
     margin: var(--gutter-small) 0;
 }
 
 h3 {
-    text-transform: uppercase;
     font-size: var(--font-size-medium-1);
     margin-bottom: var(--gutter-small);
 }
@@ -203,7 +202,7 @@ a {
 
 button:focus,
 a:focus {
-    outline: 2px solid var(--pink);
+    outline: 2px solid var(--green);
 }
 
 body:not(.user-is-tabbing) button:focus,
@@ -212,16 +211,17 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .link:hover {
-    color: var(--pink);
+    color: var(--green);
 }
 
 .btn {
     position: relative;
     display: inline-block;
+    margin-top: 15px;
     padding: 1rem 4.2rem;
     text-decoration: none;
     color: inherit;
-    border: 1px solid  var(--pink);
+    border: 1px solid  var(--green);
     font-weight: 400;
 }
 
@@ -245,20 +245,20 @@ body:not(.user-is-tabbing) a:focus {
 .btn:hover::after,
 .btn:focus::after {
     right: 0;
-    background: var(--pink);
+    background: var(--green);
 }
 
-.btn--pink {
-    background: var(--pink);
+.btn--green {
+    background: var(--green);
     transition: all 0.2s;
 }
 
-.btn--pink::after {
+.btn--green::after {
     display: none;
 }
 
-.btn--pink:hover,
-.btn--pink:focus {
+.btn--green:hover,
+.btn--green:focus {
     background: transparent;
 }
 
@@ -274,7 +274,7 @@ body:not(.user-is-tabbing) a:focus {
     padding: .6rem;
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px solid var(--pink);
+    border-bottom: 1px solid var(--green);
 }
 
 .link__text::after {
@@ -297,7 +297,7 @@ body:not(.user-is-tabbing) a:focus {
 .link__text:hover::after,
 .link__text:focus:after {
     right: 0;
-    background: var(--pink);
+    background: var(--green);
 }
 
 .link__text span {
@@ -316,7 +316,7 @@ body:not(.user-is-tabbing) a:focus {
     align-items: center;
     height: 5.5rem;
     width: 5.5rem;
-    background-color: var(--pink);
+    background-color: var(--green);
     border-radius: 50%;
     z-index: 10;
     visibility: hidden;
@@ -398,13 +398,13 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .nav__link:hover {
-    color: var(--pink);
+    color: var(--green);
 }
 
 .nav__link:hover::after {
     right: 0;
     height: 2px;
-    background: var(--pink);
+    background: var(--green);
 }
 
 /* --------------------------------------- */
@@ -469,8 +469,20 @@ body:not(.user-is-tabbing) a:focus {
 
 @media(max-width: 900px) {
     .work__box {
+        padding: 5rem;
+    }
+}
+
+@media(min-width: 900px) and (max-width: 1280px) {
+    .work__box {
+        padding: 5rem;
+    }
+}
+
+@media(max-width: 900px) {
+    .work__box {
         align-items: initial;
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 }
 
@@ -500,7 +512,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .work__boxes {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .work__code {
@@ -570,7 +582,7 @@ body:not(.user-is-tabbing) a:focus {
 .about__content {
     display: flex;
     flex-direction: row-reverse;
-    align-items: center;
+    align-items: flex-start;
 }
 
 @media(max-width: 900px) {
@@ -581,6 +593,7 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .about__photo-container {
+    margin-top: var(--gutter-normal) !important;
     margin-bottom: var(--gutter-normal);
 }
 
